[ADD] ceppp_patient_partenaire: formation patient - update template - format code

--- a/ceppp_patient_partenaire/views/ceppp_patient.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient.xml
@@ -28,7 +28,9 @@
                             </group>
                         </page>
                         <page name='formation' string="Formations">
-                            <group />
+                            <group>
+                                <field name="formation" />
+                            </group>
                         </page>
                         <page name='implication' string="Implications">
                             <group />
