--- a/ceppp_patient_partenaire/views/ceppp_formation.xml
+++ b/ceppp_patient_partenaire/views/ceppp_formation.xml
@@ -7,7 +7,24 @@
             <form string="Titre">
                 <sheet>
                     <group>
-                        <field name="name" />
+                        <field
+                            name="titre_formation"
+                            widget="many2many_tags"
+                            options="{'no_create': True, 'no_create_edit': True}"
+                        />
+                        <field name="titre_formation_is_autre" invisible="1" />
+                        <field
+                            name="titre_formation_autre"
+                            attrs="{'invisible':[('titre_formation_is_autre','=',False)]}"
+                        />
+                    </group>
+                    <group>
+                        <group>
+                            <field name="organisation" />
+                        </group>
+                        <group>
+                            <field name="date" widget="date" />
+                        </group>
                     </group>
                 </sheet>
             </form>
@@ -74,7 +91,10 @@
         <field name="model">ceppp.formation</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name" />
+                <field name="date" widget="date" />
+                <field name="titre_formation" widget="many2many_tags" />
+                <field name="titre_formation_autre" />
+                <field name="organisation" />
             </tree>
         </field>
     </record>
