--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -124,6 +124,7 @@
                         <page name='formation' string="Formations">
                             <group>
                                 <field name="formation_professionnelle" />
+                                <field name="formation" />
                             </group>
                         </page>
                         <page name='implication' string="Implications">
@@ -134,7 +135,7 @@
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers" />
                     <field name="activity_ids" widget="mail_activity" />
-                    <field name="message_ids" widget="mail_thread" />
+                    <field name="message_ids" options="{'post_refresh': 'recipients'}" widget="mail_thread" />
                 </div>
             </form>
         </field>
