[ADD] ceppp_patient_partenaire: support implication

--- a/ceppp_patient_partenaire/views/ceppp_patient.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient.xml
@@ -33,7 +33,9 @@
                             </group>
                         </page>
                         <page name='implication' string="Implications">
-                            <group />
+                            <group>
+                                <field name="implication" />
+                            </group>
                         </page>
                     </notebook>
                 </sheet>
