--- a/ceppp_patient_partenaire/views/ceppp_implication.xml
+++ b/ceppp_patient_partenaire/views/ceppp_implication.xml
@@ -7,7 +7,31 @@
             <form string="Titre">
                 <sheet>
                     <group>
-                        <field name="name" />
+                        <field
+                            name="role"
+                            widget="many2many_tags"
+                            options="{'no_create': True, 'no_create_edit': True}"
+                        />
+                        <field name="role_is_autre" invisible="1" />
+                        <field name="role_autre" attrs="{'invisible':[('role_is_autre','=',False)]}" />
+                        <field
+                            name="domaine"
+                            widget="many2many_tags"
+                            options="{'no_create': True, 'no_create_edit': True}"
+                        />
+                        <field name="domaine_is_autre" invisible="1" />
+                        <field name="domaine_autre" attrs="{'invisible':[('domaine_is_autre','=',False)]}" />
+                        <field name="titre" />
+                        <field name="nom_equipe" />
+                        <field name="description" />
+                    </group>
+                    <group>
+                        <group>
+                            <field name="echeance_debut" />
+                        </group>
+                        <group>
+                            <field name="echeance_fin" />
+                        </group>
                     </group>
                 </sheet>
             </form>
@@ -65,6 +89,22 @@
         <field name="arch" type="xml">
             <search string="Ceppp implication">
                 <filter domain="[('name','!=',False)]" name="name" string="Name" />
+                <filter domain="[('description','!=',False)]" name="description" string="Description" />
+                <filter domain="[('domaine','!=',False)]" name="domaine" string="Domaine" />
+                <filter domain="[('domaine_autre','!=',False)]" name="domaine_autre" string="Autres domaines" />
+                <filter domain="[('domaine_is_autre','=',True)]" name="domaine_is_autre" string="Domaine Is Autre" />
+                <filter
+                    domain="[('echeance_debut','!=',False)]"
+                    name="echeance_debut"
+                    string="&#201;ch&#233;ance d&#233;but"
+                />
+                <filter domain="[('echeance_fin','!=',False)]" name="echeance_fin" string="&#201;ch&#233;ance fin" />
+                <filter domain="[('nom_equipe','!=',False)]" name="nom_equipe" string="Nom de l'&#233;quipe" />
+                <filter domain="[('recruteur_id','!=',False)]" name="recruteur_id" string="Recruteur" />
+                <filter domain="[('role','!=',False)]" name="role" string="R&#244;le" />
+                <filter domain="[('role_autre','!=',False)]" name="role_autre" string="Autres r&#244;les" />
+                <filter domain="[('role_is_autre','=',True)]" name="role_is_autre" string="Role Is Autre" />
+                <filter domain="[('titre','!=',False)]" name="titre" string="Titre du projet" />
             </search>
         </field>
     </record>
@@ -74,7 +114,15 @@
         <field name="model">ceppp.implication</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name" />
+                <field name="titre" />
+                <field name="role" />
+                <field name="role_autre" />
+                <field name="domaine" />
+                <field name="domaine_autre" />
+                <field name="description" />
+                <field name="nom_equipe" />
+                <field name="echeance_debut" />
+                <field name="echeance_fin" />
             </tree>
         </field>
     </record>
