--- a/ceppp_patient_partenaire/views/ceppp_formation.xml
+++ b/ceppp_patient_partenaire/views/ceppp_formation.xml
@@ -93,7 +93,8 @@
             <tree>
                 <field name="date" widget="date" />
                 <field name="titre_formation" widget="many2many_tags" />
-                <field name="titre_formation_autre" />
+                <field name="titre_formation_is_autre" invisible="1" />
+                <field name="titre_formation_autre" attrs="{'invisible':[('titre_formation_is_autre','=',False)]}" />
                 <field name="organisation" />
             </tree>
         </field>
