--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -77,6 +77,31 @@
                                 </group>
                             </group>
                             <group>
+                                <group name="coordonnee" string="Coordonnée">
+                                    <field name="telephone" />
+                                    <field name="mobile" />
+                                    <field name="courriel" />
+                                    <label for="street" string="Adresse" />
+                                    <div class="o_address_format">
+                                        <field name="street" placeholder="Street..." class="o_address_street" />
+                                        <field name="street2" placeholder="Street 2..." class="o_address_street" />
+                                        <field name="city" placeholder="City" class="o_address_city" />
+                                        <field
+                                            name="state_id"
+                                            class="o_address_state"
+                                            placeholder="State"
+                                            options="{&quot;no_open&quot;: True}"
+                                            context="{'country_id': country_id, 'zip': adresse_postale}"
+                                        />
+                                        <field name="adresse_postale" placeholder="ZIP" class="o_address_zip" />
+                                        <field
+                                            name="country_id"
+                                            placeholder="Country"
+                                            class="o_address_country"
+                                            options="{&quot;no_open&quot;: True, &quot;no_create&quot;: True}"
+                                        />
+                                    </div>
+                                </group>
                                 <group name="Occupation" string="Autre">
                                     <field
                                         name="occupation"
