--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -19,6 +19,9 @@
                         >
                             <field name="uuid_short" />
                         </button>
+                        <button class="oe_stat_button" icon="fa-vcard" name="open_carnet_adresse_patient" type="object">
+                            Contact
+                        </button>
                     </div>
                     <field
                         name="image"
