--- a/ceppp_patient_partenaire/views/ceppp_maladie_proche_aidant.xml
+++ b/ceppp_patient_partenaire/views/ceppp_maladie_proche_aidant.xml
@@ -12,6 +12,7 @@
                             widget="many2many_tags"
                             options="{'no_create': True, 'no_create_edit': True}"
                         />
+                        <field name="autre_maladie" />
                         <field
                             name="relation"
                             widget="many2many_tags"
@@ -43,6 +44,7 @@
             <kanban class="o_kanban_mobile">
                 <field name="name" />
                 <field name="maladie" />
+                <field name="autre_maladie" />
                 <field name="relation" />
                 <field name="relation_autre" />
                 <templates>
@@ -82,6 +84,7 @@
             <search string="Ceppp maladie proche aidant">
                 <filter domain="[('name','!=',False)]" name="name" string="Name" />
                 <filter domain="[('maladie','!=',False)]" name="maladie" string="Maladies" />
+                <filter domain="[('autre_maladie','!=',False)]" name="autre_maladie" string="Autre maladie" />
                 <filter
                     domain="[('relation','!=',False)]"
                     name="relation"
@@ -98,6 +101,7 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="maladie" widget="many2many_tags" />
+                <field name="autre_maladie" />
                 <field name="relation" widget="many2many_tags" />
                 <field name="relation_is_autre" invisible="1" />
                 <field name="relation_autre" attrs="{'invisible':[('relation_is_autre','=',False)]}" />
