--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -156,6 +156,7 @@
                                     widget="many2many_tags"
                                     options="{'no_create': True, 'no_create_edit': True}"
                                 />
+                                <field name="maladie_soi_meme_autre" />
                                 <field name="maladie_proche_aidant" />
                             </group>
                         </page>
