--- a/ceppp_patient_partenaire/views/ceppp_patient.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient.xml
@@ -105,6 +105,7 @@
         <field name="model">ceppp.patient</field>
         <field name="arch" type="xml">
             <search string="Ceppp patient">
+                <field name="search_maladie" />
                 <filter domain="[('uuid','!=',False)]" name="uuid" string="Code" />
             </search>
         </field>
