[UPD] ceppp_patient_partenaire: remove pivot/graph because broken

--- a/ceppp_patient_partenaire/views/ceppp_patient.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient.xml
@@ -125,6 +125,6 @@
         id="ceppp_patient_patient_action_window"
         name="Tous les patients anonymes"
         res_model="ceppp.patient"
-        view_mode="kanban,tree,pivot,graph,form"
+        view_mode="kanban,tree,form"
     />
 </odoo>
