--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -282,20 +282,20 @@
         name="Mes patients"
         res_model="ceppp.recruteur"
         context="{'search_default_mes_patients': 1}"
-        view_mode="kanban,tree,pivot,graph,form"
+        view_mode="kanban,tree,form"
     />
 
     <act_window
         id="ceppp_patient_les_patient_affiliation_action_window"
         name="Les patients de mon centre de recrutement"
         res_model="ceppp.recruteur"
-        view_mode="kanban,tree,pivot,graph,form"
+        view_mode="kanban,tree,form"
     />
 
     <act_window
         id="ceppp_patient_les_patient_tous_centres_affiliation_action_window"
         name="Les patients de tous les centres de recrutement"
         res_model="ceppp.recruteur"
-        view_mode="kanban,tree,pivot,graph,form"
+        view_mode="kanban,tree,form"
     />
 </odoo>
