--- a/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
+++ b/ceppp_patient_partenaire/views/ceppp_patient_partenaire_templates.xml
@@ -19,23 +19,28 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="name">Name</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="name" t-attf-value="#{name}" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="name"
+                            t-attf-value="#{name}"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="date">Date</label>
                     <div class="col-md-7 col-sm-8">
-                        <div class="input-group date" data-target-input="nearest" t-att-id="date_datepicker">
+                        <div class="input-group date" data-target-input="nearest" t-attf-id="date_datepicker">
                             <input
-                                type="text"
-                                class="form-control datetimepicker-input"
-                                t-att-data-target="date_datepicker"
-                                t-att-name="prefix"
+                                class="form-control datetimepicker-input o_website_form_input o_website_form_date"
+                                name="date"
                                 t-att-value="default_date"
+                                t-attf-data-target="#date_datepicker"
+                                type="text"
                             />
                             <div
                                 class="input-group-append"
-                                t-att-data-target="date_datepicker"
+                                t-attf-data-target="#date_datepicker"
                                 data-toggle="datetimepicker"
                             >
                                 <div class="input-group-text">
@@ -50,7 +55,7 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="text"
-                            class="form-control"
+                            class="form-control o_website_form_input"
                             name="organisation"
                             t-att-value="default_organisation"
                         />
@@ -59,7 +64,7 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="recruteur_id">Recruteur_id</label>
                     <div class="col-md-7 col-sm-8">
-                        <select class="form-control" id="recruteur_id" name="recruteur_id">
+                        <select class="form-control o_website_form_input" id="recruteur_id" name="recruteur_id">
                             <t t-foreach="recruteur_id" t-as="rec">
                                 <option t-attf-value="#{rec.id}" t-att-selected="default_recruteur_id == rec.id">
                                     <t t-esc="rec.name" />
@@ -74,6 +79,7 @@
                         <t t-foreach="titre_formation" t-as="tit">
                             <input
                                 type="checkbox"
+                                class="form-control o_website_form_input"
                                 name="titre_formation"
                                 t-att-id="'titre_formation_' + tit.name + '_' + str(tit_index)"
                                 t-att-value="tit.id"
@@ -95,7 +101,7 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="text"
-                            class="form-control"
+                            class="form-control o_website_form_input"
                             name="titre_formation_autre"
                             t-att-value="default_titre_formation_autre"
                         />
@@ -108,8 +114,9 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="checkbox"
+                            class="form-control o_website_form_input"
                             name="titre_formation_is_autre"
-                            t-att-id="titre_formation_is_autre"
+                            id="titre_formation_is_autre"
                             t-att-value="True"
                             t-att-checked="default_titre_formation_is_autre"
                         />
@@ -143,13 +150,18 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="name">Name</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="name" t-attf-value="#{name}" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="name"
+                            t-attf-value="#{name}"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="description">Description</label>
                     <div class="col-md-7 col-sm-8">
-        <!-- prettier-ignore-start --><textarea class="form-control" name="description" style="min-height: 120px"><t t-esc="default_description"/></textarea><!-- prettier-ignore-end -->
+        <!-- prettier-ignore-start --><textarea class="form-control o_website_form_input" name="description" style="min-height: 120px"><t t-esc="default_description"/></textarea><!-- prettier-ignore-end -->
         </div>
                 </div>
                 <div class="form-group">
@@ -158,6 +170,7 @@
                         <t t-foreach="domaine" t-as="dom">
                             <input
                                 type="checkbox"
+                                class="form-control o_website_form_input"
                                 name="domaine"
                                 t-att-id="'domaine_' + dom.name + '_' + str(dom_index)"
                                 t-att-value="dom.id"
@@ -174,7 +187,7 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="text"
-                            class="form-control"
+                            class="form-control o_website_form_input"
                             name="domaine_autre"
                             t-att-value="default_domaine_autre"
                         />
@@ -185,8 +198,9 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="checkbox"
+                            class="form-control o_website_form_input"
                             name="domaine_is_autre"
-                            t-att-id="domaine_is_autre"
+                            id="domaine_is_autre"
                             t-att-value="True"
                             t-att-checked="default_domaine_is_autre"
                         />
@@ -195,17 +209,17 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="echeance_debut">Echeance_debut</label>
                     <div class="col-md-7 col-sm-8">
-                        <div class="input-group date" data-target-input="nearest" t-att-id="echeance_debut_datepicker">
+                        <div class="input-group date" data-target-input="nearest" t-attf-id="echeance_debut_datepicker">
                             <input
-                                type="text"
-                                class="form-control datetimepicker-input"
-                                t-att-data-target="echeance_debut_datepicker"
-                                t-att-name="prefix"
+                                class="form-control datetimepicker-input o_website_form_input o_website_form_date"
+                                name="echeance_debut"
                                 t-att-value="default_echeance_debut"
+                                t-attf-data-target="#echeance_debut_datepicker"
+                                type="text"
                             />
                             <div
                                 class="input-group-append"
-                                t-att-data-target="echeance_debut_datepicker"
+                                t-attf-data-target="#echeance_debut_datepicker"
                                 data-toggle="datetimepicker"
                             >
                                 <div class="input-group-text">
@@ -218,17 +232,17 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="echeance_fin">Echeance_fin</label>
                     <div class="col-md-7 col-sm-8">
-                        <div class="input-group date" data-target-input="nearest" t-att-id="echeance_fin_datepicker">
+                        <div class="input-group date" data-target-input="nearest" t-attf-id="echeance_fin_datepicker">
                             <input
-                                type="text"
-                                class="form-control datetimepicker-input"
-                                t-att-data-target="echeance_fin_datepicker"
-                                t-att-name="prefix"
+                                class="form-control datetimepicker-input o_website_form_input o_website_form_date"
+                                name="echeance_fin"
                                 t-att-value="default_echeance_fin"
+                                t-attf-data-target="#echeance_fin_datepicker"
+                                type="text"
                             />
                             <div
                                 class="input-group-append"
-                                t-att-data-target="echeance_fin_datepicker"
+                                t-attf-data-target="#echeance_fin_datepicker"
                                 data-toggle="datetimepicker"
                             >
                                 <div class="input-group-text">
@@ -241,13 +255,18 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="nom_equipe">Nom_equipe</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="nom_equipe" t-att-value="default_nom_equipe" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="nom_equipe"
+                            t-att-value="default_nom_equipe"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="recruteur_id">Recruteur_id</label>
                     <div class="col-md-7 col-sm-8">
-                        <select class="form-control" id="recruteur_id" name="recruteur_id">
+                        <select class="form-control o_website_form_input" id="recruteur_id" name="recruteur_id">
                             <t t-foreach="recruteur_id" t-as="rec">
                                 <option t-attf-value="#{rec.id}" t-att-selected="default_recruteur_id == rec.id">
                                     <t t-esc="rec.name" />
@@ -262,6 +281,7 @@
                         <t t-foreach="role" t-as="rol">
                             <input
                                 type="checkbox"
+                                class="form-control o_website_form_input"
                                 name="role"
                                 t-att-id="'role_' + rol.name + '_' + str(rol_index)"
                                 t-att-value="rol.id"
@@ -276,7 +296,12 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="role_autre">Role_autre</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="role_autre" t-att-value="default_role_autre" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="role_autre"
+                            t-att-value="default_role_autre"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
@@ -284,8 +309,9 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="checkbox"
+                            class="form-control o_website_form_input"
                             name="role_is_autre"
-                            t-att-id="role_is_autre"
+                            id="role_is_autre"
                             t-att-value="True"
                             t-att-checked="default_role_is_autre"
                         />
@@ -294,7 +320,12 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="titre">Titre</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="titre" t-att-value="default_titre" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="titre"
+                            t-att-value="default_titre"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
@@ -325,7 +356,11 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="chapitre_maladie_id">Chapitre_maladie_id</label>
                     <div class="col-md-7 col-sm-8">
-                        <select class="form-control" id="chapitre_maladie_id" name="chapitre_maladie_id">
+                        <select
+                            class="form-control o_website_form_input"
+                            id="chapitre_maladie_id"
+                            name="chapitre_maladie_id"
+                        >
                             <t t-foreach="chapitre_maladie_id" t-as="cha">
                                 <option t-attf-value="#{cha.id}" t-att-selected="default_chapitre_maladie_id == cha.id">
                                     <t t-esc="cha.nom" />
@@ -337,7 +372,12 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="nom">Nom</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="nom" t-att-value="default_nom" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="nom"
+                            t-att-value="default_nom"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
@@ -368,7 +408,12 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="name">Name</label>
                     <div class="col-md-7 col-sm-8">
-                        <input type="text" class="form-control" name="name" t-attf-value="#{name}" />
+                        <input
+                            type="text"
+                            class="form-control o_website_form_input"
+                            name="name"
+                            t-attf-value="#{name}"
+                        />
                     </div>
                 </div>
                 <div class="form-group">
@@ -377,6 +422,7 @@
                         <t t-foreach="maladie" t-as="mal">
                             <input
                                 type="checkbox"
+                                class="form-control o_website_form_input"
                                 name="maladie"
                                 t-att-id="'maladie_' + mal.nom + '_' + str(mal_index)"
                                 t-att-value="mal.id"
@@ -391,7 +437,7 @@
                 <div class="form-group">
                     <label class="col-md-3 col-sm-4 control-label" for="recruteur_id">Recruteur_id</label>
                     <div class="col-md-7 col-sm-8">
-                        <select class="form-control" id="recruteur_id" name="recruteur_id">
+                        <select class="form-control o_website_form_input" id="recruteur_id" name="recruteur_id">
                             <t t-foreach="recruteur_id" t-as="rec">
                                 <option t-attf-value="#{rec.id}" t-att-selected="default_recruteur_id == rec.id">
                                     <t t-esc="rec.name" />
@@ -406,6 +452,7 @@
                         <t t-foreach="relation" t-as="rel">
                             <input
                                 type="checkbox"
+                                class="form-control o_website_form_input"
                                 name="relation"
                                 t-att-id="'relation_' + rel.name + '_' + str(rel_index)"
                                 t-att-value="rel.id"
@@ -422,7 +469,7 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="text"
-                            class="form-control"
+                            class="form-control o_website_form_input"
                             name="relation_autre"
                             t-att-value="default_relation_autre"
                         />
@@ -433,8 +480,9 @@
                     <div class="col-md-7 col-sm-8">
                         <input
                             type="checkbox"
+                            class="form-control o_website_form_input"
                             name="relation_is_autre"
-                            t-att-id="relation_is_autre"
+                            id="relation_is_autre"
                             t-att-value="True"
                             t-att-checked="default_relation_is_autre"
                         />
@@ -670,6 +718,19 @@
                 </t>
             </t>
         </t>
+    </template>
+
+    <template
+        id="assets_frontend_ceppp_patient_partenaire_portal"
+        name="Portal assets frontend"
+        inherit_id="web.assets_frontend"
+    >
+        <xpath expr="//script[last()]" position="after">
+            <script
+                type="text/javascript"
+                src="/ceppp_patient_partenaire/static/src/js/portal.ceppp_patient_partenaire.js"
+            />
+        </xpath>
     </template>
 
     <template id="ceppp_patient_partenaire.portal_my_ceppp_formations" name="My Ceppp Formations">
