[FIX] ceppp_patient_partenaire: support member creation - Fix permission warning - can see private address from patient - fix maladie string creation - fix portal relation with recruteur_id

--- a/ceppp_patient_partenaire/wizards/create_member_views.xml
+++ b/ceppp_patient_partenaire/wizards/create_member_views.xml
@@ -10,11 +10,21 @@
                         name="type_membre"
                         groups="ceppp_patient_partenaire.group_ceppp_patient_partenaire_manager"
                     />
-                    <field name="recruteur_partner_id" options="{'no_create':True}" attrs="{'invisible':[('type_membre','in',['recruteur', 'administrateur'])]}"/>
+                    <field
+                        name="recruteur_partner_id"
+                        options="{'no_create':True}"
+                        attrs="{'invisible':[('type_membre','in',['recruteur', 'administrateur'])]}"
+                    />
+                    <field
+                        name="centre_recrutement_id"
+                        options="{'no_create':True}"
+                        attrs="{'invisible':[('type_membre','in',['patient'])]}"
+                    />
                 </group>
                 <group>
                     <field name="name" />
                     <field name="email" />
+                    <field name="langue" />
                 </group>
                 <div>
                     <p>
