[UPD] ceppp_patient_partenaire: fix private address - force associate ceppp.recruteur and ceppp.patient - hide button change form when no data - add by default quebec state - super admin is an administrator of the platform in demo

--- a/ceppp_patient_partenaire/views/res_partner.xml
+++ b/ceppp_patient_partenaire/views/res_partner.xml
@@ -47,7 +47,7 @@
                         icon="fa-vcard-o"
                         name="open_fiche_recruteur"
                         type="object"
-                        attrs="{'invisible':[('patient_partner_ids','=',False)]}"
+                        attrs="{'invisible':[('patient_partner_ids','=',[])]}"
                     >
                         Fiche recruteur
                     </button>
