--- a/ceppp_patient_partenaire/views/ceppp_recruteur.xml
+++ b/ceppp_patient_partenaire/views/ceppp_recruteur.xml
@@ -15,11 +15,17 @@
                             icon="fa-lock"
                             name="open_fiche_anonyme"
                             type="object"
-                            attrs="{'invisible':[('fiche_anonyme','=',False)]}"
+                            attrs="{'invisible':[('fiche_anonyme','=',[])]}"
                         >
                             <field name="uuid_short" />
                         </button>
-                        <button class="oe_stat_button" icon="fa-vcard" name="open_carnet_adresse_patient" type="object">
+                        <button
+                            class="oe_stat_button"
+                            icon="fa-vcard"
+                            name="open_carnet_adresse_patient"
+                            type="object"
+                            attrs="{'invisible':[('patient_partner_id','=',False)]}"
+                        >
                             Contact
                         </button>
                     </div>
