--- a/ceppp_patient_partenaire/views/ceppp_langue.xml
+++ b/ceppp_patient_partenaire/views/ceppp_langue.xml
@@ -8,6 +8,7 @@
                 <sheet>
                     <group>
                         <field name="nom" />
+                        <field name="sequence" />
                     </group>
                 </sheet>
             </form>
@@ -72,6 +73,7 @@
         <field name="model">ceppp.langue</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="sequence" widget="handle" />
                 <field name="nom" />
             </tree>
         </field>
